Добавлено: favicon, смена информации о ходе

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel = "stylesheet" href = "styles/variables.css">
     <link rel = "stylesheet" href = "styles/styles.css">
+    <link rel = "shortcut icon" href = "imgs/favicon.ico">
 </head>
 <body>
  
